# conformalpp

./: .gitignore  CMakeLists.txt  Color.cpp  Color.h  ComplexRectangle.cpp  ComplexRectangle.h  README.md  RiemannSphere.cpp  RiemannSphere.h  SphericalPoint.cpp  main.cpp
src/: ComplexRectangle.cpp  ComplexRectangle.h  FastMath.cpp  FastMath.h  RiemannSphere.cpp  RiemannSphere.h  SphericalPoint.h  main.cpp
